--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,15 @@
 </head>
 <body>
 
-<%= yield %>
+  <div class="container">
+    <% if user_signed_in? %>
+      <%= render partial: "/commons/navbar", locals: { controller: params[:controller] } %>
+    <% end %>
+
+    <div class="container-fluid">
+      <%= yield %>
+    </div>
+  </div>
 
 </body>
 </html>
