--- a/app/views/titles/_title.html.erb
+++ b/app/views/titles/_title.html.erb
@@ -3,6 +3,10 @@
     <%= link_to title_path(title.id), class: "btn btn-default" do %>
       <i class="fa fa-eye"></i>
     <% end %>
+
+    <%= link_to title_path(title.id), method: :delete, class: "btn btn-default" do %>
+      <i class="fa fa-times"></i>
+    <% end %>
   </td>
 
   <td><%= title.name %></td>
