--- a/app/views/titles/_volume.html.erb
+++ b/app/views/titles/_volume.html.erb
@@ -2,7 +2,7 @@
   <td><%= obj[:volume] %></td>
 
   <td>
-    <ul>
+    <ul class="list-group">
       <%= render partial: 'chapter', collection: obj[:chapters], as: :chapter %>
     </ul>
   </td>
